memoria/versoes/v1.0.79/fase2_roteiros_anamnese.md
# CONTEXTO FASE 2: CONSTRUÇÃO DE ROTEIROS E ANAMNESE
# Banco de Semiologia + Diretrizes para Roteiros

## DIRETRIZES PARA ROTEIROS DO ATOR

### Regras Básicas:
- HDA por Sintoma-Guia: Contexto para cada sintoma principal
- A Força dos Negativos: Incluir negação de sintomas relevantes
- Carga Emocional: Estado emocional e possíveis recusas
- Perguntas Padronizadas: Programar perguntas-chave

### Regras de Formatação:
- MOTIVO DE CONSULTA: Sucinto, primeira pessoa, sem caracterização
- Cada sintoma separado em contexto próprio
- Informações detalhadas sem parênteses
- Características individualizadas (Dor, Prurido, etc.)

## BANCO DE SEMIOLOGIA - SINTOMAS PRINCIPAIS

### DISPNEIA
- Início: Súbito ou gradual
- Duração: Tempo total
- Padrão: Contínua ou episódica
- Intensidade: Escala 0-10
- AVDs: Impacto nas atividades
- Ortopneia/DPN: Travesseiros, despertar noturno
- Fatores: Piora/melhora
- Associados: Tosse, dor, sibilos
- Tabagismo: Quantificado

### FEBRE
- Início: Súbito com calafrios ou gradual
- Duração: Dias com febre
- Padrão: Contínua ou picos
- Intensidade: Temperatura máxima
- Associados: Calafrios, sudorese
- Resposta: Antitérmicos
- Viagens: Últimas 4 semanas
- Contatos: Doentes/animais

### DOR ABDOMINAL
- Início/Duração: Súbito/gradual, contínua/intermitente
- Localização: Quadrante específico
- Irradiação: Propagação
- Caráter: Cólica, queimação, pontada
- Intensidade: Escala 0-10
- Fatore de piora: Alimentação, evacuação, micção
- Progressão: vem progredindo ou diminuindo com o passar dos dias, messes
- Frequencia : Quantas vezes ao dia, na semana, predominio de horario
- Fator de melhora: Alimentação, evacuação, micção, medicamento
- Associados: Náuseas, vômitos, febre
- Sinais de Alarme: Febre alta, sangue, parada de gases

### CEFALEIA
- Início: Súbito (explosão) ou gradual
- Localização: Específica ou difusa
- Intensidade: Escala 0-10, comparação
- Tipo: Pulsátil, tensional, em aperto
- Duração: Episódios
- Fatores: Piora (luz, som) / Melhora (escuro, repouso)
- Associados: Náuseas, aura visual
- Sinais de Alarme: Primeira vez, diferente do habitual

### ALTERAÇÕES DE PESO
- Início: Quando começou a notar a alteração de peso?
- Tipo: Perda ou ganho de peso
- Quantificação: Exemplo: 'Perdi 6 quilos nos últimos 3 meses'
- Intencionalidade: Exemplo: 'Não foi intencional, não estou fazendo dieta'
- Relação com apetite: Exemplo: 'Meu apetite diminuiu muito'
- Tempo de evolução: Exemplo: 'Notei a mudança de peso há cerca de 2 meses'
- Sintomas associados: Exemplo: 'Além da perda de peso, tenho sentido muito cansaço'
- Episódios prévios: Já teve alterações de peso semelhantes antes?

### ASTENIA/FADIGA
- Início: Exemplo: 'Começou há cerca de 1 mês'
- Diferenciação: Exemplo: 'Sinto mais cansaço do que fraqueza'
- Evolução: Exemplo: 'Tem piorado com o tempo'
- Impacto funcional: Exemplo: 'Estou com dificuldade para fazer as tarefas de casa'
- Relação com atividade/repouso: Exemplo: 'Piora quando faço esforço, melhora um pouco quando descanso'
- Qualidade do sono: Tem dormido bem? Ronca? Acorda cansado(a)?
- Sintomas de humor associados (tristeza, anedonia): Tem se sentido triste ou desanimado(a)? Perdeu o interesse em coisas que gostava?
- Sintomas associados: Exemplo: 'Tenho dormido mal e perdido peso'
- Episódios prévios: Já teve algo similar antes?

### LESÕES CUTÂNEAS
- Início: Exemplo: 'Apareceu há 5 dias'
- Evolução: Exemplo: 'A lesão aumentou de tamanho e mudou de cor'
- Localização: Exemplo: 'Começou no braço'
- Quantidade: Exemplo: 'Uma lesão única ou várias?'
- Sintomas associados: Exemplo: 'Coça e às vezes arde'
- Fatores desencadeantes: Exemplo: 'Apareceu depois que usei um creme novo'
- Exposição: Exemplo: 'Não tive contato com plantas ou animais diferentes'
- Uso de medicamentos: Exemplo: 'Estou usando um creme para a pele'
- Episódios prévios: Já teve algo similar antes?

### PRURIDO (COCEIRA)
- Início: Exemplo: 'Começou há 2 semanas'
- Localização: Exemplo: 'Coça mais nas pernas, mas às vezes no corpo todo'
- Intensidade: Exemplo: 'É forte, nota 7 de 10'
- Piora/melhora: Exemplo: 'Piora à noite, melhora um pouco com banho frio'
- Lesões associadas: Exemplo: 'Fica vermelho e com marcas de unha'
- Sintomas sistêmicos: Exemplo: 'Não notei febre nem amarelão nos olhos'
- Contexto: Exemplo: 'Ninguém mais em casa está com coceira'
- Episódios prévios: Já teve algo similar antes?

### TONTURA/VERTIGEM
- Início: Exemplo: 'Começou de repente, enquanto estava em pé'
- Tipo: Exemplo: 'Sinto que tudo gira ao meu redor'
- Duração: Exemplo: 'Dura alguns minutos e depois passa'
- Fatores desencadeantes: Exemplo: 'Piora quando viro a cabeça rápido'
- Sintomas associados: Exemplo: 'Às vezes fico com náusea e suor frio'
- Impacto funcional: Exemplo: 'Já caí uma vez por causa da tontura'
- Episódios prévios: Já teve algo similar antes?

### TOSSE
- Início: Quando a tosse começou?
- Duração: Aguda (<3 semanas), subaguda (3-8 semanas) ou crônica (>8 semanas)
- Característica: Seca ou produtiva com catarro
- Padrão/Gatilhos: Pior pela manhã, à noite, com exercício, exposição à poeira
- Expectoração: Cor, consistência, quantidade do catarro, se houver
- Presença de sangue: Se houve hemoptise, quantidade, frequência
- Sintomas associados: Febre, dispneia, dor torácica
- Episódios prévios: Já teve algo similar antes?

### DOR TORÁCICA
- Início: Súbito ou gradual
- Localização: Onde exatamente no peito? Precordial, retroesternal?
- Irradiação: Para mandíbula, braço esquerdo, costas?
- Caráter: Aperto, peso, queimação, pontada
- Intensidade: Escala 0-10
- Duração: Quanto tempo dura cada episódio?
- Fatores desencadeantes: Durante esforço, em repouso, com emoções?
- Fatores de alívio: Repouso, posição, nitratos?
- Sintomas associados: Dispneia, sudorese, náuseas, síncope
- Episódios prévios: Já teve algo similar antes?

### PALPITAÇÕES
- Início/Término: Começa e termina subitamente ou gradualmente?
- Descrição: Como sente o coração bater? Rápido e regular, irregular?
- Duração/Frequência: Quanto tempo dura? Com que frequência ocorre?
- Fatores desencadeantes: Esforço, estresse, café, álcool?
- Sintomas associados: Tontura, pré-síncope, síncope, dor no peito
- Episódios prévios: Já teve algo similar antes?

### EDEMA DE MEMBROS
- Início: Quando começou?
- Localização: Quais membros? Unilateral ou bilateral?
- Padrão: Pior no final do dia? Melhora ao elevar as pernas?
- Caráter: Forma cacifo/depressão quando aperta com o dedo?
- Sintomas associados: Dispneia, ortopneia, DPN
- Episódios prévios: Já teve algo similar antes?

### NÁUSEAS E VÔMITOS
- Início: Quando começou?
- Frequência: Quantos episódios por dia?
- Relação temporal: Ocorre em jejum, após alimentação?
- Conteúdo: Alimentar recente, bilioso, com sangue, fecaloide?
- Fatores de alívio: O que melhora? Algum medicamento usado?
- Sintomas associados: Dor abdominal, diarreia, febre
- Episódios prévios: Já teve algo similar antes?

### ALTERAÇÕES INTESTINAIS
- Início: Quando começou?
- Tipo: Diarreia ou constipação
- Duração: Aguda ou crônica
- Frequência: Quantas evacuações por dia/semana?
- Consistência: Líquida, pastosa, endurecida, em cíbalos
- Cor: Normal, clara, escura, com sangue, com muco
- Volume: Grande ou pequeno volume em cada evacuação
- Sintomas associados: Dor, distensão abdominal, tenesmo, urgência
- Padrão: Contínua ou intermitente? Também ocorre à noite?
- Fatores de melhora/piora: Alimentos específicos, estresse, medicamentos
- Uso de medicamentos recentes (especialmente antibióticos e laxantes): Usou algum remédio novo recentemente?
- Histórico de viagens recentes: Viajou recentemente? Para onde?
- Episódios prévios: Já teve algo similar antes?

### ICTERÍCIA/COLÚRIA/ACOLIA
- Início: Quando notou o amarelão? Foi súbito ou gradual?
- Intensidade: Leve, moderada, intensa
- Prurido: Presença de coceira associada? Intensidade?
- Colúria: Urina escura como Coca-Cola?
- Acolia fecal: Fezes claras, esbranquiçadas?
- Sintomas associados: Dor abdominal, febre, perda de peso
- Episódios prévios: Já teve algo similar antes?

### SINTOMAS URINÁRIOS
- Início: Quando começaram os sintomas?
- Disúria: Dor ou ardência ao urinar
- Polaciúria: Aumento da frequência urinária
- Urgência: Vontade súbita e incontrolável de urinar
- Nictúria: Necessidade de levantar à noite para urinar
- Hesitação: Demora para iniciar o jato
- Jato fraco: Diminuição da força do jato
- Gotejamento terminal: Continua pingando após terminar
- Sensação de esvaziamento incompleto: Sente que não esvaziou tudo
- Alterações na urina: Presença de sangue, cheiro forte, espuma
- Episódios prévios: Já teve algo similar antes?

### DOR LOMBAR
- Início: Quando começou a dor?
- Localização: Lombar bilateral ou unilateral (flanco)?
- Irradiação: Para região inguinal, genitais?
- Caráter: Em cólica? Peso? Contínua?
- Intensidade: Escala 0-10
- Fatores de melhora/piora: Repouso, posição, movimentos?
- Sintomas urinários associados: Disúria, hematúria, febre
- Episódios prévios: Já teve algo similar antes?

### CORRIMENTO VAGINAL/URETRAL
- Início: Quando começou?
- Cor: Branco, amarelado, esverdeado, acinzentado
- Odor: Presença de odor forte ou desagradável
- Quantidade: Pequena, moderada, grande
- Consistência: Espesso tipo 'nata', bolhoso, fluido
- Sintomas associados: Coceira, ardor, dispareunia, disúria
- Relação com ciclo menstrual: Piora antes/depois da menstruação
- Episódios prévios: Já teve algo similar antes?

### DOR ARTICULAR/RIGIDEZ
- Início: Quando começou? Súbito ou gradual?
- Localização: Quais articulações? Padrão simétrico?
- Número de articulações acometidas: Uma, poucas (2-4) ou muitas (>4)?
- Caráter: Tipo de dor: latejante, em peso, em pontada
- Intensidade: Escala 0-10
- Padrão da dor: Pior pela manhã (inflamatório) ou no fim do dia (mecânico)?
- Fator de melhora com atividade física: A dor melhora com o movimento inicial?
- Rigidez matinal: Presente? Duração? >1h sugere inflamação
- Sinais inflamatórios: Articulações ficam inchadas, quentes, vermelhas?
- Limitação funcional: Impacto nas atividades diárias
- Sintomas sistêmicos: Febre, perda de peso, lesões cutâneas
- Episódios prévios: Já teve algo similar antes?

### ALTERAÇÕES NEUROLÓGICAS
- Início: Súbito ou gradual? Quando iniciou?
- Tipo: Fraqueza (paresia), alteração de sensibilidade (parestesia)
- Localização: Onde exatamente? Padrão de distribuição? Lado do corpo?
- Evolução: Está piorando, melhorando ou estável?
- Fatores desencadeantes: Trauma, posição, movimento?
- Sintomas associados: Alteração visual, fala, marcha, consciência


### **1.1. Estação de Encontro Clínico Completo**
O formato clássico que simula uma consulta completa.
* **Foco:** Raciocínio clínico do início ao fim.
* **Estrutura:** Anamnese, exame físico, solicitação de exames, diagnóstico e conduta.
* **Exemplos:** Pancreatite Aguda, Dengue Clássica, AVC Isquêmico.

### **1.2. Estação de Habilidade Procedimental/Educacional**
Foca exclusivamente na execução e/ou explicação de uma técnica ou procedimento.
* **Foco:** "Saber como fazer" e "saber como ensinar".
* **Estrutura:** Anamnese e exame físico geral são omitidos (conforme `avisosImportantes`). As tarefas são diretas: "Realizar a técnica...", "Demonstrar e verbalizar...", "Registrar nos gráficos...".
* **Exemplos:** Sutura, Exame Físico Obstétrico, Puericultura (Antropometria), Orientação de Insulinoterapia.

### **1.3. Estação de Habilidade de Comunicação**
Foca no manejo de diálogos sensíveis e na aplicação de protocolos de comunicação.
* **Foco:** Habilidades interpessoais, empatia, clareza e profissionalismo.
* **Estrutura:** Anamnese e exame físico são omitidos. As tarefas envolvem "Utilizar habilidades...", "Comunicar o diagnóstico...", "Acolher...".
* **Exemplos:** Comunicação de Más Notícias (Protocolo SPIKES), Prevenção de Câncer de Colo em Mulher Lésbica (abordagem de discriminação), Abordagem da Obesidade (pactuação de metas), NUNCA COLOCAR NADA ENTRE PARENTESES, NUNCA DAR DICAS NAS TAREFAS DE COMO FAZER OU O QUE FAZER OU SOLICITAS, APENAS TAREFAS GENERICAS PARA QUE O CANDIDATO SIGA E SAIBA E O QUE FAZER.

### **1.4. Estação de Protocolo de Emergência**
Foca na aplicação correta e sequencial de protocolos de atendimento rápido.
* **Foco:** "Saber o que fazer primeiro" em uma emergência.
* **Estrutura:** Segue uma sequência lógica de atendimento (ex: ABCDE do ATLS).
* **Materiais:** Impressos com protocolos e fluxogramas de atendimento.
* **Roteiro do ator:** Quando o paciente esta inconciente ou irresponsivel não tem anamnese, apenas tem os dados do paciente como impressos, e instrução ao chefe de estação nas informações verbais do simulado apenas para dar respostas ou liberar impressos com as informações conforme o candidato solicita ou questiona, geralmente sao protocolos especificos que seguem uma ordem cronologia de tarefas, exe: xatls, pals, reanimação neonatal, pcr, etc.
* **Exemplos:** Pneumotórax Hipertensivo (xATLS), Grande Queimado (ATLS e Parkland), PALMS, Reanimação neonatal.


### **2. O ROTEIRO DO ATOR: INFORMAÇÃO ESTRATÉGICA (informacoesVerbaisSimulado)** ###

## 2.1 REGRAS BÁSICAS

- O roteiro é uma ferramenta de avaliação.

- * **HDA por Sintoma-Guia:** Crie um `contextoOuPerguntaChave` para cada sintoma principal (Ex: "DOR ABDOMINAL", "SANGRAMENTO VAGINAL"). Isso organiza a informação e facilita a criação de itens de avaliação específicos no PEP.

- * **A Força dos Negativos:** Inclua ativamente a negação de sintomas importantes para o diagnóstico diferencial. Isso avalia a capacidade do candidato de excluir outras hipóteses.

- * **Carga Emocional e Recusas:** Em casos sensíveis (Ex: Violência Sexual), o roteiro deve incluir o estado emocional do paciente ("com muito medo") e possíveis recusas a procedimentos ("Não quero ser examinada").

- * **Perguntas Padronizadas (`perguntasAtorSimulado`):** Use esta seção para programar perguntas-chave que o ator fará em momentos específicos (ex: após o diagnóstico), garantindo que todos os candidatos sejam testados na sua capacidade de explicar e orientar.

## 2.2 REGRAS OBRIGATÓRIAS DE CONTEXTOS E INFORMAÇÕES PADRONIZADAS E REGRAS DE EXIBIÇÃO E FORMATAÇÃO

*** Cada sintoma/queixa do paciente em relação ao motivo de consulta, no campo 'informacao' deve conter TODAS as informações relevantes, incluindo características, essas nunca devem estar contidas entre parenteses, e sim detalhadas uma a uma separadas por \n como todas as informaçções de todos os 'conteudoOuPalavraChave', como por exemplo, ao inves de estar assim:Ex: 'Caracteristica da macha': Dói, coça, descama e sangra, crie informações separadas para cada uma, assim: \nDor: [Dói]\nPrurido: [Coça]\nDescamação: [Descama]\nSangramento: [Não sangra], OBS: ESSA REGRA VALE TAMBEM PARA AS INFORMAÇÕES DA DESCRIÇÕES DOS ITENS DE AVALIAÇÃO DO PEP (VEREMOS MAIS ABAIXO EM UM TOPICO ESPECIFICO MAIS JÁ GUARDE ESSA INFORMAÇÃO) ***

*** "SEMPRE INCLUIR 'informacao' DA ANAMNESE / HISTORIA CLINICA que tenha IMPORTANCIA / RELEVANCIA CLINICA / EPIDEMIOLÓGICA  E/OU PARA DESCARTAR OUTROS DIAGNOSTICOS, QUE TENHA RELEVANCIA, AOS 'contextos' MESMO QUE ELA SEJA 'negada' pelo paciente e TODAS essas mesmas 'informacao' de um 'contexto' seja ela relatada ou negada devem estar OBRIGATORIAMENTE inseridas no PEP nos item de avaliação, cada uma separada individualmente e listada separadas por \n, sem economizar, liste o possivel sempre." ***

*** Na caracterização do(s) 'sintoma principal/sintoma guia' do motivo de consulta, o item "Característica" se for mais que duas ou mais caracteristicas, exibir o nome de cada um e não exibir esse campo, Ex: Caracteristica da macha: Dói, coça, descama e sangra, essa maneira está errado, crie informações separadas para cada uma, assim: \nDor: [Dói]\nPrurido: [Coça]\nDescamação: [Descama]\nSangramento: [Não sangra], que isso seja padrao, se for apenas uma caracteristica desconsidere essa orientação. *** (logo abaixo tem outros exemplos disto)

## 2.3 REGRAS GERAIS PARA EXIBIÇÃO DAS 'informacoesVerbaisSimulado' E SEU CONTEÚDO

*** HISTÓRIA DA DOENÇA ATUAL NÃO DEVE SER EXIBIDA E SIM O NOME DE CADA SINTOMA/QUEIXA (Sintomas guia) E SE FOR MAIS DE UM SINTOMA CRIAR UM NOVO "contextoOuPerguntaChave" PARA CADA SINTOMA, NUNCA DESCREVER A CARACTERIZAÇÃO DE UM MESMO SINTOMA/QUEIXA EM UM MESMO CONTEXTO (APENAS REFORÇANDO POIS É ESSENCIAL). ***

**Orientações, regras de exibição / formatação e padrões para os campos: 'contextoOuPerguntaChave' e 'informacao'**

 - *IDENTIFICAÇÃO DO(s) PACIENTE(s):* 

 Sempre exibir os dados de identificação do(s) acompanhante(s), geralmente são estações de pediatria ou em casos com adolescentes, ou idosos incapazes ou pessoas incapazes,(pai, mãe, ambos, avó, cuidador, tia, tio, professora, cuidador, enfermeiro, filha, filho, sobrinho,etc), o padrão do campo 'informacao' sempre é composto por :Nome, idade, estado civil e profissão, outras informações como procedencia (Ex: casos de malaria que o paciente veio/viajou ou vive em regiao endemica, procedente de regiões especificas de certas doenças), religâo (se for um caso em que o paciente é de certa religiao que não aceita certos procedimentos), genero (em estações onde o paciente é gay, lésbica, ou lgbt, apenas nesses casos).

 - *MOTIVO DE CONSULTA:* 

 Motivo claro e objetivo, deve ser registrada de forma sucinta, utilizando as palavras exatas do paciente, apenas contendo os sintoma(s)/queixas do paciente, sem caracterização, por exemplo, não deve ser assim: "Estou com dor de barriga muito forte a dois dias e febre de 38 graus", o correto deve ser assim: "Estou com dor de barriga e também estou com febre".

 - *História da Doença Atual (HDA), O Coração da Anamnese:* (RECAPITULANDO)

 Esta é a seção mais importante e detalhada da anamnese, onde a queixa principal e seus sintomas associados são explorados em profundidade. A HDA deve ser uma narrativa clara, lógica e cronológica do adoecimento, desde o primeiro sintoma até o momento da consulta. Cada sintoma relatado deve ser minuciosamente dissecado utilizando um roteiro semiológico universal. Cada sintoma deve conter os seguintes elementos praticamente obrigatórios, que são os seguintes: "Início: [Quando começou? Há quanto tempo? Como começou?]\nLocalização: [Onde exatamente? Bem ou mal localizada? É em um menbro ou varios, doi só o joelho direitou ou dói os dois?]\nQuantidade: [São quantas machans, quantas feridas, quantos caroços, quantas picadas, quantas mordidas]\nIntensidade: [Escala 0-10, fraca? forte? desconforto?]\nCaracterística(Qualidade/caráter): [Como é o sintoma: pontada, queimação, pressão, etc.?(se for mais que uma caracteristica, exibir o nome de cada um e não exibir esse campo, Ex: Caracteristica da macha: Dói, coça, descama e sangra, crie informações separadas para cada uma, assim: \nDor: [Dói]\nPrurido: [Coça]\nDescamação: [Descama]\nSangramento: [Não sangra], que isso seja padrao)]\nIrradiação: [Migração da dor ? Espalha para onde? Propaga-se?]\nDuração: [Contínuo, intermitente, duração dos episódios?]\n Progressão: [Progressiva, em melhora, está piorando com o tempo? Como tem evoluído?]\nFrequencia: [Quantas vezes ocorre? Qauntas vezes vomitou? Quantas vezes teve diarréia? Quantos acessos de tosse durante a crise?]\nFator de piora ou agravante: [O que piora o sintoma? ao movimento?, após se alimentar?, Quando está ansioso? quando esta estressado?, piora ao acordar?, piora ao movimentar?, parado?, ao deitar?, após beber café?]\nFator de melhora ou atenuante: [O que alivia? melhora em repouso?, Melhora ao se movimentar? Melhora ao comer? melhora ao deitar? melhora após usar medicamento(s)?, Melhora após evacuar? posição?]\nEpisódios prévios: [Já teve algo similar antes?, Já teve esse sintoma antes?, Quantas vezes já sentiu isso antes?, Já teve essa cris]\nMedicação de alivio: [Usou algum analgésico para a dor?,Com que resultado?]"
 Cada sintoma/queixa do paciente da história da doença atual, especificamente no campo 'informacao' do contexto do sintoma deve conter TODAS as informações relevantes, incluindo características (essas nunca devem estar contidas entre parenteses, e sim detalhadas uma a uma separadas por \n como todas as informaçções de todos os 'conteudoOuPalavraChave', como por exemplo, ao inves de estar assim: Caracteristicas:  Caracteristicas ()), duração e fatores de melhora/piora.


 - *ORIENTAÇÕES AO CHEFE DE ESTAÇÃO* - Esse campo deve ser exibido/criado somente em situações específicas, como estações de trauma (xatls), parada cardiorespiratória, emergencias, onde não tem interação com o paciente, ai ao inves de roteiro de ator, tem apenas contextos com informações para passar ao candidato, e essas informações nao devem ser inseridas no campo 'informacao' e sim como 'impresso' e o 'contextoOuPerguntaChave' será a orientação do chefe de estação de qual impresso liberar ou do que responder ao candidato (nesse caso apenas se as respostas forem curtas, nunca frases complexas, resultado de exames fisicos, exames complementares, etc).


## 3. TAREFAS PRINCIPAIS POR ESPECIALIDADE

### CLÍNICA MÉDICA - Padrões de Tarefas

**Padrão Geral (Casos Ambulatoriais):**
- Realizar anamnese direcionada à queixa principal do paciente
- Solicitar/realizar exames físicos necessários à avaliação do caso
- Solicitar exames complementares pertinentes ao caso clínico
- Relacionar os resultados dos exames às hipóteses diagnósticas
- Verbalizar o diagnóstico, sua classificação de gravidade e elaborar a conduta terapêutica

**Padrão Específico - Casos com Exames Pré-existentes:**
- Ler a ficha do paciente apresentada a seguir
- Fazer a anamnese dirigida ao paciente
- Interpretar os exames apresentados e verbalizar seus achados
- Estabelecer o diagnóstico inicial
- Estabelecer a conduta terapêutica indicada

**Padrão para Casos Complexos/Sistêmicos:**
- Realizar anamnese detalhada
- Solicitar exame físico completo
- Analisar exames complementares
- Formular hipóteses diagnósticas principais e diferenciais
- Elaborar plano terapêutico e seguimento

### CIRURGIA GERAL - Padrões de Tarefas

**Padrão Ambulatorial/Eletivo:**
- Realizar anamnese do paciente
- Solicitar/realizar exames físicos necessários à avaliação do caso
- Solicitar exames complementares pertinentes ao caso clínico
- Relacionar os resultados dos exames às hipóteses diagnósticas
- Verbalizar o diagnóstico, sua classificação de gravidade e elaborar a conduta terapêutica

**Padrão Urgência/Emergência:**
- Realizar o atendimento do paciente, verbalizando os achados e as condutas
- Solicitar a realização de exames que julgar necessários
- Definir a extensão e gravidade do quadro
- Adotar a conduta terapêutica necessária

**Padrão com Avaliação Específica (ex: trauma, queimadura):**
- Realizar avaliação primária seguindo protocolo ABCDE
- Calcular scores específicos (ex: superfície corporal queimada)
- Indicar medidas de suporte e estabilização
- Determinar necessidade de transferência/especialização

### PEDIATRIA - Padrões de Tarefas

**Padrão Puericultura/Rotina:**
- Realizar a anamnese dirigida à mãe/responsável
- Solicitar qualquer exame físico e/ou complementar que considere pertinente
- Explicar os achados do exame físico
- Analisar o crescimento e desenvolvimento da criança
- Explicar ao responsável o diagnóstico clínico da criança
- Orientar sobre prevenção, cuidados e seguimento

**Padrão Urgência Pediátrica:**
- Ler a ficha da paciente apresentada a seguir
- Fazer a anamnese dirigida ao responsável
- Solicitar qualquer exame físico e/ou complementar que deseje
- Comentar o exame físico (não será necessário examinar diretamente o paciente)
- Estabelecer o diagnóstico inicial e responder aos questionamentos
- Solicitar exames complementares, se necessário
- Interpretar os exames apresentados e verbalizar seus achados
- Confirmar a hipótese diagnóstica
- Encaminhar o paciente de acordo com a conduta terapêutica indicada

### GINECOLOGIA E OBSTETRÍCIA - Padrões de Tarefas

**Padrão Ginecológico:**
- Realizar anamnese dirigida
- Solicitar exames pertinentes ao caso
- Verbalizar hipótese diagnóstica e diagnósticos diferenciais
- Solicitar exames complementares, caso necessário
- Propor à paciente o tratamento a ser realizado
- Explicar possíveis complicações da doença
- Dar orientações de seguimento

**Padrão Obstétrico/Urgência:**
- Realizar anamnese
- Solicitar os exames que julgar necessários
- Responder aos questionamentos da paciente simulada
- Citar hipótese diagnóstica
- Realizar as condutas necessárias
- Estabelecer a orientação final à paciente simulada

### MEDICINA DA FAMÍLIA - Padrões de Tarefas

**Padrão Atenção Primária/Prevenção:**
- Abordar adequadamente a pessoa conforme contexto específico
- Avaliar critérios específicos da condição (ex: dependência, risco)
- Orientar adequadamente sobre intervenções comportamentais
- Indicar tratamento medicamentoso e/ou não medicamentoso adequado
- Cumprir medidas de prevenção e controle comunitário

**Padrão Doença Endêmica/Notificável:**
- Realizar o atendimento do paciente
- Definir o diagnóstico clínico-epidemiológico
- Orientar o plano terapêutico
- Cumprir as medidas de prevenção e controle
- Realizar notificação compulsória
Análise Quantitativa e Qualitativa do PEP

## Parte 3.1: Análise Aprofundada de Tarefas e Casos Especiais (Baseado na Prova 2024.2)

A análise do `CONSOLIDADO_2024_2_ESTACOES_INEP.json` permite um aprofundamento nos padrões das `tarefasPrincipais` e na estrutura de estações com roteiro verbal mínimo.

### 3.1. Padrões em `tarefasPrincipais` por Especialidade e Cenário

As tarefas são altamente adaptadas ao contexto da estação.

- **Cenário de Emergência/Procedimento (Ex: AVC, Trauma Abdominal):**
  - **Foco:** Ação, diagnóstico rápido e conduta imediata.
  - **Estrutura:** As tarefas são diretas, imperativas e seguem um fluxo lógico de atendimento emergencial, nao tem anamnese, apenas orientações ao chefe da estação para liberar informações e impressos (sinais vitais, exame fisico, exames de imagem, laboratorio, antecedentes, historia clinica, etc).
  - **Exemplos:**
    - `"Aplicar a escala NIHSS ao paciente."` (AVC)
    - `"Totalizar a pontuação da escala NIHSS e VERBALIZAR."` (AVC)
    - `"Estabelecer e comunicar a(s) hipótese(s) diagnóstica(s) definitiva(s)"/ "Propor tratamento inicial e definitivo."` (Trauma Abdominal)

- **Cenário Ambulatorial/Orientação (Ex: Criptorquidia, Dengue):**
  - **Foco:** Raciocínio clínico, diagnóstico diferencial, comunicação com o paciente/família e planejamento de cuidados.
  - **Estrutura:** As tarefas envolvem mais explicação, interpretação e orientação.
  - **Exemplos:**
    - `"Interpretar o exame físico e explicar à mãe os diagnósticos..."` (Criptorquidia)
    - `"Elencar as possíveis complicações para a(s) condição(ões) encontrada(s) no paciente."` (Criptorquidia)
    -  `"Verbalizar o diagnóstico" / "sua classificação de gravidade" / "elaborar a conduta terapêutica"` (Dengue)

- **Conclusão para Padronização:**
  - As tarefas devem ser desenhadas para refletir o objetivo central da estação.
  - Para estações de emergência, as tarefas devem ser mais diretas e focadas na ação.
  - Para estações ambulatoriais, as tarefas devem incluir mais elementos de comunicação, interpretação e orientação, alinhando-se com a necessidade de um atendimento mais integral.
  - NUNCA DAR ORIENTAÇÕES DE COMO FAZER OU DO QUE PEDIR E O QUE FAZER, Ex: "Classifique o paciente conforme o CURB 65, QUERO QUE SEJA ASSIM, Classifique o paciente corretamente, sem orientações ou exemplos entre parenteses por favor
